src/objects/AF_Agency_Estimate__c.object
<CustomObject>
    <fields>
        <fullName>AF_isChangedbyUserType__c</fullName>
        <description>Tracks the user type which change the cell</description>
        <label>isChangedbyUserType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_isCommentImage__c</fullName>
        <description>Used to show Blue Icon in matrix for changes and comments</description>
        <formula>if( AF_isComment__c , IMAGE( $Label.AF_AgencyUrlLink+&quot;/resource/AF_isComment&quot;, &quot;Comment&quot; ,15,15) ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCommentImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_isComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether a comment has been made against the record</description>
        <label>isComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_isLocked__c</fullName>
        <description>Used to render the Save Button depending on user type and status</description>
        <formula>IF( text($User.AF_Agency_Fees_User_Type__c)=&quot;CMCO Super User&quot;,false,
 IF( AF_Brand_Estimate__r.AF_Locked__c , true, 
  IF( text($User.AF_Agency_Fees_User_Type__c)=&quot;&quot; , true, 
    IF( text($User.AF_Agency_Fees_User_Type__c)=&quot;Category Finance&quot; &amp;&amp;  (text(AF_Brand_Estimate__r.AF_Status_Base_Fees__c) =&quot;Ready for PO&quot; || text(AF_Brand_Estimate__r.AF_Status_Base_Fees__c) =&quot;with CMCO&quot;) , true,
     IF( text($User.AF_Agency_Fees_User_Type__c)=&quot;Agency&quot; &amp;&amp;  (text(AF_Brand_Estimate__r.AF_Status_Base_Fees__c) !=&quot;with agency (draft)&quot; &amp;&amp; text(AF_Brand_Estimate__r.AF_Status_Base_Fees__c) !=&quot;with agency&quot;) , true,
     true
    )
   )
  )
 )  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adaptation_USD_Formula__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(AF_Agency_Spot_Rate__c)),AF_Agency_Spot_Rate__c!=0,NOT(ISBLANK(AF_Adaptation__c)), AF_Adaptation__c!= 0,NOT(ISBLANK(AF_Agency_Exchange_Rate__c)),AF_Agency_Exchange_Rate__c!=0),(AF_Adaptation__c  *AF_Agency_Exchange_Rate__c)/AF_Agency_Spot_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adaptation USD Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Account_Id__c</fullName>
        <description>Stores the ID of the Agency. Used in Lookups and reporting</description>
        <formula>AF_Agency_Entity__r.AF_Agency__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Account__c</fullName>
        <description>Stores Agency Name. Used for sharing rules and reports</description>
        <formula>AF_Agency_Entity__r.AF_Agency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Stores the Brand Name</description>
        <formula>AF_Brand_Estimate__r.Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Agency__c</fullName>
        <description>Stores the Category Name. Used in Reporting</description>
        <formula>AF_Brand_Estimate__r.Brand__r.AF_Category_Brands__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not Used</description>
        <label>Central Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDfromPilot__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>IDfromPilot</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indicative_Gain_Loss_in_EUR__c</fullName>
        <description>Show loss of Gain in eur when estimate converts to another currency at ready for PO</description>
        <label>Indicative Gain/Loss in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicative_Gain_in_USD__c</fullName>
        <description>Show loss of Gain in usd when estimate converts to another currency at ready for PO</description>
        <label>Indicative Gain in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Matrix_Currency_Code__c</fullName>
        <description>Currency to Show on the Matrix</description>
        <label>Matrix  Currency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_PO_Raised_New__c</fullName>
        <formula>(AF_CountNoQuarters__c/4)*AF_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter PO Raised New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_For_PO_Exchange_Rate_Report__c</fullName>
        <formula>if( AF_Agency_Spot_Rate__c=0 || AF_Agency_Spot_Rate__c=null,  AF_Agency_Exchange_Rate__c  , AF_Agency_Spot_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready For PO Exchange Rate Report</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestQuartersDone__c</fullName>
        <formula>case(  SUBSTITUTE(SUBSTITUTE(testquarters__c, &quot; &quot;, &quot;&quot;),&quot;-&quot;,&quot;&quot;)    , 
&quot;Q1&quot;,0, 
&quot;Q1Q2&quot;,0, 
&quot;Q1Q3&quot;,0, 
&quot;Q1Q4&quot;,0, 
&quot;Q2&quot;,1, 
&quot;Q2Q3&quot;,1, 
&quot;Q2Q4&quot;,1, 
&quot;Q3&quot;,2, 
&quot;Q3Q4&quot;,2, 
&quot;Q4&quot;,3,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestQuartersDone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Before_Ready_for_PO__c</fullName>
        <formula>AF_Total__c *  AF_Agency_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Before Ready for PO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traditional_USD_Formula__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(AF_Agency_Spot_Rate__c)),AF_Agency_Spot_Rate__c!=0,NOT(ISBLANK(AF_Traditional__c)), AF_Traditional__c!= 0,NOT(ISBLANK(AF_Agency_Exchange_Rate__c)),AF_Agency_Exchange_Rate__c!=0),(AF_Traditional__c*AF_Agency_Exchange_Rate__c)/AF_Agency_Spot_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF_Traditional_USD_Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UE_Country_and_Ag_Country__c</fullName>
        <description>Field to show Unilever and Agency Country. Used in dataloading</description>
        <formula>TEXT(AF_Unilever_Entity__r.AF_Country__c) &amp; &apos;-&apos; &amp; TEXT(AF_Agency_Entity__r.AF_Country__c)</formula>
        <label>UE Country and Ag Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilever_Code__c</fullName>
        <defaultValue>&quot;EUR&quot;</defaultValue>
        <description>Shows the EUR as default value used in Matrix</description>
        <label>Unilever Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance_Total__c</fullName>
        <description>Show the difference in Foreign Exchange between currency before ready for po and after</description>
        <label>Variance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bReqValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**Technical Field : Inorder to bypass the validation rule, set this value as TRUE***</description>
        <label>bReqValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testquarters__c</fullName>
        <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  AF_Brand_Estimate__r.AF_BrandEstimateName__c,   Brand__c, &quot;&quot;), Agency_Account__c ,&quot;&quot;), AF_Fiscal_Year__c ,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testquarters</label>
        <type>Text</type>
    </fields>
    <label>Agency Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AF_Unilever_Entity__c</columns>
        <columns>AF_Agency_Entity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>AF_Agency_Exchange_Rate__c</columns>
        <columns>AF_Agency_Spot_Rate__c</columns>
        <columns>AF_Total__c</columns>
        <columns>AF_Total_Local__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AF_Brand_Estimate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agency Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>